src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    PAS_BREAK
    PAS_CONTINUE
    PAS_DEFAULT
    PAS_DIV
    PAS_EXIT
    PAS_FILE
    PAS_FORWARD
    PAS_IN
    PAS_LABEL
    PAS_NIL
    PAS_PACKED
    PAS_SET
    PAS_SIZEOF
    PAS_WITH
    PAS_XOR
    SYM_AT
    SYM_CARET

Grammar

Rule 0     S' -> program
Rule 1     program -> program_head routine SYM_PERIOD
Rule 2     program_head -> PAS_PROGRAM ID SYM_SEMICOLON
Rule 3     routine -> routine_head routine_body
Rule 4     sub_routine -> routine_head routine_body
Rule 5     routine_head -> label_part const_part type_part var_part routine_part
Rule 6     label_part -> empty
Rule 7     const_part -> PAS_CONST const_expr_list
Rule 8     const_part -> empty
Rule 9     const_expr_list -> const_expr_list ID SYM_EQ const_value SYM_SEMICOLON
Rule 10    const_expr_list -> ID SYM_EQ const_value SYM_SEMICOLON
Rule 11    const_value -> INT
Rule 12    const_value -> REAL
Rule 13    const_value -> CHAR
Rule 14    const_value -> STR
Rule 15    const_value -> SYS_CON
Rule 16    type_part -> PAS_TYPE type_decl_list
Rule 17    type_part -> empty
Rule 18    type_decl_list -> type_decl_list type_definition
Rule 19    type_decl_list -> type_definition
Rule 20    type_definition -> ID SYM_EQ type_decl SYM_SEMICOLON
Rule 21    type_decl -> simple_type_decl
Rule 22    type_decl -> array_type_decl
Rule 23    type_decl -> record_type_decl
Rule 24    simple_type_decl -> SYS_TYPE
Rule 25    simple_type_decl -> ID
Rule 26    simple_type_decl -> SYM_LPAREN name_list SYM_RPAREN
Rule 27    simple_type_decl -> const_value SYM_RANGE const_value
Rule 28    simple_type_decl -> SYM_SUB const_value SYM_RANGE const_value
Rule 29    simple_type_decl -> SYM_SUB const_value SYM_RANGE SYM_SUB const_value
Rule 30    simple_type_decl -> ID SYM_RANGE ID
Rule 31    array_type_decl -> PAS_ARRAY SYM_LBRAC simple_type_decl SYM_RBRAC PAS_OF type_decl
Rule 32    record_type_decl -> PAS_RECORD field_decl_list PAS_END
Rule 33    field_decl_list -> field_decl_list field_decl
Rule 34    field_decl_list -> field_decl
Rule 35    field_decl -> name_list SYM_COLON type_decl SYM_SEMICOLON
Rule 36    name_list -> name_list SYM_COMMA ID
Rule 37    name_list -> ID
Rule 38    var_part -> PAS_VAR var_decl_list
Rule 39    var_part -> empty
Rule 40    var_decl_list -> var_decl_list var_decl
Rule 41    var_decl_list -> var_decl
Rule 42    var_decl -> name_list SYM_COLON type_decl SYM_SEMICOLON
Rule 43    routine_part -> routine_part function_decl
Rule 44    routine_part -> routine_part procedure_decl
Rule 45    routine_part -> function_decl
Rule 46    routine_part -> procedure_decl
Rule 47    routine_part -> empty
Rule 48    function_decl -> function_head SYM_SEMICOLON sub_routine SYM_SEMICOLON
Rule 49    function_head -> PAS_FUNCTION ID parameters SYM_COLON simple_type_decl
Rule 50    procedure_decl -> procedure_head SYM_SEMICOLON sub_routine SYM_SEMICOLON
Rule 51    procedure_head -> PAS_PROCEDURE ID parameters
Rule 52    parameters -> SYM_LPAREN para_decl_list SYM_RPAREN
Rule 53    parameters -> empty
Rule 54    para_decl_list -> para_decl_list SYM_SEMICOLON para_type_list
Rule 55    para_decl_list -> para_type_list
Rule 56    para_type_list -> var_para_list SYM_COLON simple_type_decl
Rule 57    para_type_list -> val_para_list SYM_COLON simple_type_decl
Rule 58    var_para_list -> PAS_VAR name_list
Rule 59    val_para_list -> name_list
Rule 60    routine_body -> compound_stmt
Rule 61    compound_stmt -> PAS_BEGIN stmt_list PAS_END
Rule 62    stmt_list -> stmt_list stmt SYM_SEMICOLON
Rule 63    stmt_list -> empty
Rule 64    stmt -> INT SYM_COLON non_label_stmt
Rule 65    stmt -> non_label_stmt
Rule 66    non_label_stmt -> assign_stmt
Rule 67    non_label_stmt -> proc_stmt
Rule 68    non_label_stmt -> compound_stmt
Rule 69    non_label_stmt -> if_stmt
Rule 70    non_label_stmt -> repeat_stmt
Rule 71    non_label_stmt -> while_stmt
Rule 72    non_label_stmt -> for_stmt
Rule 73    non_label_stmt -> case_stmt
Rule 74    non_label_stmt -> goto_stmt
Rule 75    assign_stmt -> ID SYM_ASSIGN expression
Rule 76    assign_stmt -> ID SYM_LBRAC expression SYM_RBRAC SYM_ASSIGN expression
Rule 77    assign_stmt -> ID SYM_PERIOD ID SYM_ASSIGN expression
Rule 78    proc_stmt -> ID
Rule 79    proc_stmt -> ID SYM_LPAREN args_list SYM_RPAREN
Rule 80    proc_stmt -> SYS_PROC
Rule 81    proc_stmt -> SYS_PROC SYM_LPAREN expression_list SYM_RPAREN
Rule 82    proc_stmt -> PAS_READ SYM_LPAREN factor SYM_RPAREN
Rule 83    if_stmt -> PAS_IF expression PAS_THEN stmt else_clause
Rule 84    else_clause -> PAS_ELSE stmt
Rule 85    else_clause -> empty
Rule 86    repeat_stmt -> PAS_REPEAT stmt_list PAS_UNTIL expression
Rule 87    while_stmt -> PAS_WHILE expression PAS_DO stmt
Rule 88    for_stmt -> PAS_FOR ID SYM_ASSIGN expression direction expression PAS_DO stmt
Rule 89    direction -> PAS_TO
Rule 90    direction -> PAS_DOWNTO
Rule 91    case_stmt -> PAS_CASE expression PAS_OF case_expr_list PAS_END
Rule 92    case_expr_list -> case_expr_list case_expr
Rule 93    case_expr_list -> case_expr
Rule 94    case_expr -> const_value SYM_COLON stmt SYM_SEMICOLON
Rule 95    case_expr -> ID SYM_COLON stmt SYM_SEMICOLON
Rule 96    goto_stmt -> PAS_GOTO INT
Rule 97    expression_list -> expression_list SYM_COMMA expression
Rule 98    expression_list -> expression
Rule 99    expression -> expression SYM_GE expr
Rule 100   expression -> expression SYM_GT expr
Rule 101   expression -> expression SYM_LE expr
Rule 102   expression -> expression SYM_LT expr
Rule 103   expression -> expression SYM_EQ expr
Rule 104   expression -> expression SYM_NE expr
Rule 105   expression -> expr
Rule 106   expr -> expr SYM_ADD term
Rule 107   expr -> expr SYM_SUB term
Rule 108   expr -> expr PAS_OR term
Rule 109   expr -> term
Rule 110   term -> term SYM_MUL factor
Rule 111   term -> term SYM_DIV factor
Rule 112   term -> term PAS_MOD factor
Rule 113   term -> term PAS_AND factor
Rule 114   term -> factor
Rule 115   factor -> ID
Rule 116   factor -> ID SYM_LPAREN args_list SYM_RPAREN
Rule 117   factor -> SYS_FUNCT
Rule 118   factor -> SYS_FUNCT SYM_LPAREN args_list SYM_RPAREN
Rule 119   factor -> const_value
Rule 120   factor -> SYM_LPAREN expression SYM_RPAREN
Rule 121   factor -> PAS_NOT factor
Rule 122   factor -> SYM_SUB factor
Rule 123   factor -> ID SYM_LBRAC expression SYM_RBRAC
Rule 124   factor -> ID SYM_PERIOD ID
Rule 125   args_list -> args_list SYM_COMMA expression
Rule 126   args_list -> expression
Rule 127   empty -> <empty>

Terminals, with rules where they appear

CHAR                 : 13
ID                   : 2 9 10 20 25 30 30 36 37 49 51 75 76 77 77 78 79 88 95 115 116 123 124 124
INT                  : 11 64 96
PAS_AND              : 113
PAS_ARRAY            : 31
PAS_BEGIN            : 61
PAS_BREAK            : 
PAS_CASE             : 91
PAS_CONST            : 7
PAS_CONTINUE         : 
PAS_DEFAULT          : 
PAS_DIV              : 
PAS_DO               : 87 88
PAS_DOWNTO           : 90
PAS_ELSE             : 84
PAS_END              : 32 61 91
PAS_EXIT             : 
PAS_FILE             : 
PAS_FOR              : 88
PAS_FORWARD          : 
PAS_FUNCTION         : 49
PAS_GOTO             : 96
PAS_IF               : 83
PAS_IN               : 
PAS_LABEL            : 
PAS_MOD              : 112
PAS_NIL              : 
PAS_NOT              : 121
PAS_OF               : 31 91
PAS_OR               : 108
PAS_PACKED           : 
PAS_PROCEDURE        : 51
PAS_PROGRAM          : 2
PAS_READ             : 82
PAS_RECORD           : 32
PAS_REPEAT           : 86
PAS_SET              : 
PAS_SIZEOF           : 
PAS_THEN             : 83
PAS_TO               : 89
PAS_TYPE             : 16
PAS_UNTIL            : 86
PAS_VAR              : 38 58
PAS_WHILE            : 87
PAS_WITH             : 
PAS_XOR              : 
REAL                 : 12
STR                  : 14
SYM_ADD              : 106
SYM_ASSIGN           : 75 76 77 88
SYM_AT               : 
SYM_CARET            : 
SYM_COLON            : 35 42 49 56 57 64 94 95
SYM_COMMA            : 36 97 125
SYM_DIV              : 111
SYM_EQ               : 9 10 20 103
SYM_GE               : 99
SYM_GT               : 100
SYM_LBRAC            : 31 76 123
SYM_LE               : 101
SYM_LPAREN           : 26 52 79 81 82 116 118 120
SYM_LT               : 102
SYM_MUL              : 110
SYM_NE               : 104
SYM_PERIOD           : 1 77 124
SYM_RANGE            : 27 28 29 30
SYM_RBRAC            : 31 76 123
SYM_RPAREN           : 26 52 79 81 82 116 118 120
SYM_SEMICOLON        : 2 9 10 20 35 42 48 48 50 50 54 62 94 95
SYM_SUB              : 28 29 29 107 122
SYS_CON              : 15
SYS_FUNCT            : 117 118
SYS_PROC             : 80 81
SYS_TYPE             : 24
error                : 

Nonterminals, with rules where they appear

args_list            : 79 116 118 125
array_type_decl      : 22
assign_stmt          : 66
case_expr            : 92 93
case_expr_list       : 91 92
case_stmt            : 73
compound_stmt        : 60 68
const_expr_list      : 7 9
const_part           : 5
const_value          : 9 10 27 27 28 28 29 29 94 119
direction            : 88
else_clause          : 83
empty                : 6 8 17 39 47 53 63 85
expr                 : 99 100 101 102 103 104 105 106 107 108
expression           : 75 76 76 77 83 86 87 88 88 91 97 98 99 100 101 102 103 104 120 123 125 126
expression_list      : 81 97
factor               : 82 110 111 112 113 114 121 122
field_decl           : 33 34
field_decl_list      : 32 33
for_stmt             : 72
function_decl        : 43 45
function_head        : 48
goto_stmt            : 74
if_stmt              : 69
label_part           : 5
name_list            : 26 35 36 42 58 59
non_label_stmt       : 64 65
para_decl_list       : 52 54
para_type_list       : 54 55
parameters           : 49 51
proc_stmt            : 67
procedure_decl       : 44 46
procedure_head       : 50
program              : 0
program_head         : 1
record_type_decl     : 23
repeat_stmt          : 70
routine              : 1
routine_body         : 3 4
routine_head         : 3 4
routine_part         : 5 43 44
simple_type_decl     : 21 31 49 56 57
stmt                 : 62 83 84 87 88 94 95
stmt_list            : 61 62 86
sub_routine          : 48 50
term                 : 106 107 108 109 110 111 112 113
type_decl            : 20 31 35 42
type_decl_list       : 16 18
type_definition      : 18 19
type_part            : 5
val_para_list        : 57
var_decl             : 40 41
var_decl_list        : 38 40
var_para_list        : 56
var_part             : 5
while_stmt           : 71

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program_head routine SYM_PERIOD
    (2) program_head -> . PAS_PROGRAM ID SYM_SEMICOLON

    PAS_PROGRAM     shift and go to state 3

    program                        shift and go to state 1
    program_head                   shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> program_head . routine SYM_PERIOD
    (3) routine -> . routine_head routine_body
    (5) routine_head -> . label_part const_part type_part var_part routine_part
    (6) label_part -> . empty
    (127) empty -> .

    PAS_CONST       reduce using rule 127 (empty -> .)
    PAS_TYPE        reduce using rule 127 (empty -> .)
    PAS_VAR         reduce using rule 127 (empty -> .)
    PAS_FUNCTION    reduce using rule 127 (empty -> .)
    PAS_PROCEDURE   reduce using rule 127 (empty -> .)
    PAS_BEGIN       reduce using rule 127 (empty -> .)

    routine                        shift and go to state 4
    routine_head                   shift and go to state 5
    label_part                     shift and go to state 6
    empty                          shift and go to state 7

state 3

    (2) program_head -> PAS_PROGRAM . ID SYM_SEMICOLON

    ID              shift and go to state 8


state 4

    (1) program -> program_head routine . SYM_PERIOD

    SYM_PERIOD      shift and go to state 9


state 5

    (3) routine -> routine_head . routine_body
    (60) routine_body -> . compound_stmt
    (61) compound_stmt -> . PAS_BEGIN stmt_list PAS_END

    PAS_BEGIN       shift and go to state 12

    routine_body                   shift and go to state 10
    compound_stmt                  shift and go to state 11

state 6

    (5) routine_head -> label_part . const_part type_part var_part routine_part
    (7) const_part -> . PAS_CONST const_expr_list
    (8) const_part -> . empty
    (127) empty -> .

    PAS_CONST       shift and go to state 14
    PAS_TYPE        reduce using rule 127 (empty -> .)
    PAS_VAR         reduce using rule 127 (empty -> .)
    PAS_FUNCTION    reduce using rule 127 (empty -> .)
    PAS_PROCEDURE   reduce using rule 127 (empty -> .)
    PAS_BEGIN       reduce using rule 127 (empty -> .)

    const_part                     shift and go to state 13
    empty                          shift and go to state 15

state 7

    (6) label_part -> empty .

    PAS_CONST       reduce using rule 6 (label_part -> empty .)
    PAS_TYPE        reduce using rule 6 (label_part -> empty .)
    PAS_VAR         reduce using rule 6 (label_part -> empty .)
    PAS_FUNCTION    reduce using rule 6 (label_part -> empty .)
    PAS_PROCEDURE   reduce using rule 6 (label_part -> empty .)
    PAS_BEGIN       reduce using rule 6 (label_part -> empty .)


state 8

    (2) program_head -> PAS_PROGRAM ID . SYM_SEMICOLON

    SYM_SEMICOLON   shift and go to state 16


state 9

    (1) program -> program_head routine SYM_PERIOD .

    $end            reduce using rule 1 (program -> program_head routine SYM_PERIOD .)


state 10

    (3) routine -> routine_head routine_body .

    SYM_PERIOD      reduce using rule 3 (routine -> routine_head routine_body .)


state 11

    (60) routine_body -> compound_stmt .

    SYM_PERIOD      reduce using rule 60 (routine_body -> compound_stmt .)
    SYM_SEMICOLON   reduce using rule 60 (routine_body -> compound_stmt .)


state 12

    (61) compound_stmt -> PAS_BEGIN . stmt_list PAS_END
    (62) stmt_list -> . stmt_list stmt SYM_SEMICOLON
    (63) stmt_list -> . empty
    (127) empty -> .

    PAS_END         reduce using rule 127 (empty -> .)
    INT             reduce using rule 127 (empty -> .)
    ID              reduce using rule 127 (empty -> .)
    SYS_PROC        reduce using rule 127 (empty -> .)
    PAS_READ        reduce using rule 127 (empty -> .)
    PAS_BEGIN       reduce using rule 127 (empty -> .)
    PAS_IF          reduce using rule 127 (empty -> .)
    PAS_REPEAT      reduce using rule 127 (empty -> .)
    PAS_WHILE       reduce using rule 127 (empty -> .)
    PAS_FOR         reduce using rule 127 (empty -> .)
    PAS_CASE        reduce using rule 127 (empty -> .)
    PAS_GOTO        reduce using rule 127 (empty -> .)

    stmt_list                      shift and go to state 17
    empty                          shift and go to state 18

state 13

    (5) routine_head -> label_part const_part . type_part var_part routine_part
    (16) type_part -> . PAS_TYPE type_decl_list
    (17) type_part -> . empty
    (127) empty -> .

    PAS_TYPE        shift and go to state 20
    PAS_VAR         reduce using rule 127 (empty -> .)
    PAS_FUNCTION    reduce using rule 127 (empty -> .)
    PAS_PROCEDURE   reduce using rule 127 (empty -> .)
    PAS_BEGIN       reduce using rule 127 (empty -> .)

    type_part                      shift and go to state 19
    empty                          shift and go to state 21

state 14

    (7) const_part -> PAS_CONST . const_expr_list
    (9) const_expr_list -> . const_expr_list ID SYM_EQ const_value SYM_SEMICOLON
    (10) const_expr_list -> . ID SYM_EQ const_value SYM_SEMICOLON

    ID              shift and go to state 23
